--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="tab">
-    <img class ="qr-code" src="images/image-qr-code.png" alt="qr-code">
+    <img class ="qr-code" src="image-qr-code.png" alt="qr-code">
     <p class="title">Improve your front-end skills by building projects</p>
     <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
